<resources>
    <string name="app_name">George Zhou COMP304 SEC004 Lab 03</string>
    <string name="lblSelectTask">Select a task to show the solution:</string>
    <string name="lblLineThickness">Line Thickness</string>
    <string name="lblLineColor">Line Color</string>
    <string name="lblArrowKeys">Arrow Keys</string>
    <string name="radRed">Red</string>
    <string name="radGreen">Green</string>
    <string name="radYellow">Yellow</string>
    <string name="btnClear">CLEAR</string>

    <string-array name="tasks">
        <item>Task 1</item>
        <item>Task 2</item>
        <item>Task 3</item>
    </string-array>

    <string-array name="brushSize">
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
    </string-array>
</resources>