<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="65"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblLineThickness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/lblLineThickness" />

                    <Spinner
                        android:id="@+id/spinLineSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/brushSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblLineColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/lblLineColor" />

                    <RadioGroup
                        android:id="@+id/radgColor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radRed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/radRed" />

                        <RadioButton
                            android:id="@+id/radGreen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/radGreen" />

                        <RadioButton
                            android:id="@+id/radYellow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/radYellow" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblArrowKeys"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/lblArrowKeys" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <!-- Row 1 -->
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="3">

                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:visibility="invisible">

                            </ImageButton>

                            <ImageButton
                                android:id="@+id/imgbuttonUp"
                                android:layout_weight="1"
                                android:background="@drawable/arrowup"
                                android:onClick="onUpClick">

                            </ImageButton>

                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:visibility="invisible"
                                tools:visibility="invisible">

                            </ImageButton>

                        </TableRow>

                        <!-- Row 2 -->
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="3">

                            <ImageButton
                                android:id="@+id/imgbuttonLeft"
                                android:layout_weight="1"
                                android:background="@drawable/arrowleft"
                                android:onClick="onLeftClick">

                            </ImageButton>

                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:visibility="invisible">

                            </ImageButton>

                            <ImageButton
                                android:id="@+id/imgbuttonRight"
                                android:layout_weight="1"
                                android:background="@drawable/arrowright"
                                android:onClick="onRightClick">

                            </ImageButton>

                        </TableRow>


                        <!-- Row 3 -->
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="3">

                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:visibility="invisible">

                            </ImageButton>

                            <ImageButton
                                android:id="@+id/imgbuttonDown"
                                android:layout_weight="1"
                                android:background="@drawable/arrowdown"
                                android:onClick="onDownClick">

                            </ImageButton>

                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:visibility="invisible">

                            </ImageButton>

                        </TableRow>


                    </TableLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clearCanvas"
                    android:text="@string/btnClear" />

                <TextView
                    android:id="@+id/txtCoordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="X:Y:" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ImageViewForDrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:minWidth="600px"
                android:minHeight="600px"></ImageView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>